--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,29 @@
 server.ssl.enabled=true
 server.port=8081
 
-
+# SSL
 server.ssl.key-store-type=PKCS12
 # The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/jkbn.p12
+server.ssl.key-store=classpath:keystore/jkbn.jks
 # The password used to generate the certificate
 server.ssl.key-store-password=jkbn.no
 # The alias mapped to the certificate
 server.ssl.key-alias=jkbn
 
 
+# Spring data JPA
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=jkbn
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# KeyCloak
+keycloak.auth-server-url=https://localhost/idp/
+keycloak.realm=apt-search
+keycloak.resource=apt-search-api
+keycloak.security-constraints[0].authRoles[0]=user
+keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
+#keycloak.public-client=true
+#keycloak.principal-attribute=preferred_username
