Add users, explore places owned by users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.username=postgres
 spring.datasource.password=jkbn
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # KeyCloak
 keycloak.auth-server-url=https://localhost/idp/
