Remove spring data rest, change user service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,5 +25,5 @@ keycloak.realm=apt-search
 keycloak.resource=apt-search-api
 keycloak.security-constraints[0].authRoles[0]=user
 keycloak.security-constraints[0].securityCollections[0].patterns[0]=/*
-#keycloak.public-client=true
-#keycloak.principal-attribute=preferred_username
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
